# FlashySlideshows

./: AUTHORS  CMakeLists.txt  COPYING  CodeBlocks.workspace  CodeBlocks.workspace.mak  FlashySlideShow.cbp  FlashySlideShow.depend  FlashySlideShow.layout  FlashySlideShowStarterApp  FlashySlideshows.desktop  INSTALL  LICENSE  README  README.md  apt-get-dependencies  apt-get-dependencies.sh  camera_control.cpp  camera_control.h  controls.cpp  controls.h  debug_slideshow  directory_listing.cpp  directory_listing.h  directory_sorting.cpp  directory_sorting.h  directory_transactions.cpp  directory_transactions.h  effects.cpp  effects.h  environment.cpp  environment.h  flashyslideshows  flashyslideshowsgui  get-dependencies.sh  getWebServer.sh  gprof_performance  image_sensing.cpp  image_sensing.h  install.sh  joystick.cpp  (+33 more)
FlashySlideShowStarter/: EmptyThumbnail.h  FlashySlideShowStarter.cbp  FlashySlideShowStarter.depend  FlashySlideShowStarterApp.h  FlashySlideShowStarterMain.cpp  FlashySlideShowStarterMain.h
FlashySlideShowStarter/wxsmith/: FlashySlideShowStarterframe.wxs
app_clipart/: remote_control.html
debian/: README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  flashyslideshows.cron.d.ex  flashyslideshows.default.ex  flashyslideshows.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
layouts/: basic_layout.cpp  basic_layout.h  expo_layout.cpp  expo_layout.h  layout_handler.cpp  layout_handler.h
scripts/: myloader
src/: CMakeLists.txt  FlashySlideShow.cbp  FlashySlideShow.cbp.mak  FlashySlideShow.depend  FlashySlideShow.layout  camera_control.cpp  camera_control.h  controls.cpp  controls.h  debug_slideshow  directory_listing.cpp  directory_transactions.cpp  directory_transactions.h  environment.cpp  gmon.out  image_sensing.cpp  joystick.cpp  main.cpp  memory_hypervisor.h  pictures_control.cpp  pictures_control.h  scene_objects.cpp  scene_objects.h  slideshow.cpp  slideshow.h  version.h  visuals.cpp  visuals.h  webinterface.cpp  webinterface.h  wxwidgets_stuff.cpp  wxwidgets_stuff.h
src/AmmarServer/: CMakeLists.txt
src/AmmarServer/src/AmmServerNULLlib/: AmmServerlib.h  CMakeLists.txt  main.c
src/AmmarServer/src/AmmServerlib/: AmmServerlib.h  main.c~  make
src/Codecs/: codecs.c  codecs.h
src/FlashySlideShowStarter/: CMakeLists.txt  EmptyThumbnail.h  EmptyThumbnail.xpm  FlashyLogo.h  FlashyLogo.xpm  FlashySlideShowStarter.cbp  FlashySlideShowStarter.cbp.mak  FlashySlideShowStarter.depend  FlashySlideShowStarter.layout  FlashySlideShowStarterApp.cpp  FlashySlideShowStarterMain.cpp  FlashySlideShowStarterMain.h
src/FlashySlideShowStarter/wxsmith/: FlashySlideShowStarterframe.wxs
src/filesystem/: directory_listing.cpp  directory_listing.h  directory_sorting.h  directory_transactions.cpp
src/hypervisor/: load_images.cpp  load_images.h  load_textures.cpp  load_textures.h  memory_hypervisor.cpp  memory_hypervisor.h
src/layouts/: expo_layout.h  layout_handler.cpp  layout_handler.h
src/tools/: commandlineParser.cpp  commandlineParser.h  environment.cpp  environment.h  image_sensing.cpp  image_sensing.h  joystick.cpp  math_3d.h  scriptIntegration.cpp  scriptIntegration.h  sound.cpp  sound.h  webinterface.cpp  webinterface.h  wxwidgets_stuff.cpp  wxwidgets_stuff.h
src/transitions/: transition_handler.cpp  transition_handler.h
src/visuals/: background.cpp  effects.cpp  effects.h  hud.cpp  picture_renderer.cpp  picture_renderer.h
transitions/: basic_transition.cpp  basic_transition.h  transition_handler.cpp
visuals/: background.cpp  background.h  effects.cpp  hud.cpp  hud.h  picture_renderer.cpp
